# techtalk-pse

./: .gitignore  Makefile  Makefile.am  Makefile.in  NOTES  README  TODO  config.status  configure  configure.ac  markdown-husk.html  techtalk-pse  techtalk-pse.1  techtalk-pse.pl  techtalk-pse.sh
examples/simple/: 10-hello.html  15-second.html  20-shell.sh  20-shell.term  30-gears.sh  30-goodbye.html  40-goodbye.html  README  functions  style.css
